Add block for showing image maps. Required patch to media tags to markup filter to allow for usemap. Sneaking in left/right/centre align in wysiwyg

--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -51,6 +51,9 @@ settings:
           name: 'Block Formatting'
           items:
             - Format
+            - JustifyLeft
+            - JustifyCenter
+            - JustifyRight
             - Indent
             - Outdent
         -
