--- a/web/modules/custom/ipu_tweaks/ipu_tweaks.libraries.yml
+++ b/web/modules/custom/ipu_tweaks/ipu_tweaks.libraries.yml
@@ -6,6 +6,9 @@ ultimenu-override:
   css:
     theme:
       css/ultimenu_override.css: {}
-      css/metisMenu.css: {}
   js:
     js/ultimenu_override.js: {}
+responsive-imagemaps:
+    js:
+      js/rwdImageMaps/jquery.rwdImageMaps.min.js: {}
+      js/responsive-imagemaps.js: {}
