--- a/composer.json
+++ b/composer.json
@@ -207,6 +207,9 @@
                 "Exception thrown by responsive srcset images when the image is not yet in the file system": "https://www.drupal.org/files/issues/2827921-remove-missing-responsive-image-width-exception.patch",
                 "Increase entity autocomplete results count.patch": "web/patches/increase_entity_autocomplete_results_count.patch"
             },
+            "drupal/convert_media_tags_to_markup": {
+                "Add usemap to imagefield filter": "web/patches/add_usemap_to_imagefield_filter.patch"
+            },
             "drupal/pathauto": {
                 "Pathauto token for node menu hierarchy not working after updating parent node": "https://www.drupal.org/files/issues/2019-05-07/pathauto-update_child_aliases-3016532-8.patch"
             },
