--- a/composer.json
+++ b/composer.json
@@ -52,11 +52,14 @@
         "drupal/date_all_day": "^1.0@beta",
         "drupal/date_popup": "^1.0",
         "drupal/datetime_extras": "^1.0@alpha",
+        "drupal/devel": "^2.1",
+        "drupal/devel_debug_log": "1.x-dev",
         "drupal/ds": "^3.3",
         "drupal/editor_advanced_link": "^1.4",
         "drupal/entity_embed": "^1.0@beta",
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/entityqueue": "^1.0@beta",
+        "drupal/eva": "^2.0-rc3",
         "drupal/facets": "^1.3",
         "drupal/features": "^3.8",
         "drupal/feeds": "^3.0@alpha",
@@ -202,7 +205,8 @@
                 "IPU: Entity load null assert breaks paragraph add ajax See issue 3035980": "web/patches/ipu_entity_load_null_assert-3035980.patch",
                 "Ignore width height on untranslatable field": "https://www.drupal.org/files/issues/2019-02-11/ignore_width_height_on_untranslatable_field_comparision_2941092_8.patch",
                 "Path alias filter by system path": "https://www.drupal.org/files/issues/2018-03-24/path_alias_filter_by-2418755-69.patch",
-                "Term route context": "https://www.drupal.org/files/issues/2019-04-12/term_route_context-2998826-31.patch"
+                "Term route context": "https://www.drupal.org/files/issues/2019-04-12/term_route_context-2998826-31.patch",
+                "Date range start or end formatter": "https://www.drupal.org/files/issues/2018-05-23/drupal-display-one-date-formatter-2827055-25.patch"
             },
             "drupal/pathauto": {
                 "Pathauto token for node menu hierarchy not working after updating parent node": "https://www.drupal.org/files/issues/2019-05-07/pathauto-update_child_aliases-3016532-8.patch"
@@ -218,6 +222,9 @@
             },
             "drupal/viewfield": {
                 "Display missing view instead of title in viewfield": "web/patches/missing_view_in_viewfield.patch"
+            },
+            "drupal/devel_debug_log": {
+                "Empty message if being called from drush": "https://www.drupal.org/files/issues/2802681-make-drush-compatible.patch"
             }
 
         },
