--- a/config/sync/core.entity_view_display.node.ipu_event.full.yml
+++ b/config/sync/core.entity_view_display.node.ipu_event.full.yml
@@ -32,16 +32,14 @@ dependencies:
     - address
     - datetime_range
     - ds
-    - entity_reference_revisions
-    - smart_trim
     - user
 third_party_settings:
   ds:
     layout:
-      id: bs_2col_stacked
+      id: events_page
       library: null
       disable_css: false
-      entity_classes: all_classes
+      entity_classes: no_classes
       settings:
         layout:
           wrapper: div
@@ -50,57 +48,62 @@ third_party_settings:
           add_layout_class: 1
           attributes: ''
         regions:
-          top:
-            wrapper: div
-            classes:
-              col-sm-12: col-sm-12
-            add_region_classes: 1
-            attributes: ''
           left:
             wrapper: div
             classes:
-              col-sm-6: col-sm-6
+              col-md-3: col-md-3
+            add_region_classes: 1
+            attributes: ''
+          left_sub_page_menu:
+            wrapper: div
+            classes: {  }
             add_region_classes: 1
             attributes: ''
           right:
             wrapper: div
             classes:
-              col-sm-6: col-sm-6
+              col-md-9: col-md-9
             add_region_classes: 1
             attributes: ''
-          bottom:
+          right_sub_page_content:
             wrapper: div
-            classes:
-              col-sm-12: col-sm-12
+            classes: {  }
             add_region_classes: 1
             attributes: ''
     regions:
-      top:
-        - field_event_type
+      left_sub_page_menu:
+        - event_sub_pages_sub_page_titles_eva
+        - event_programme_tab
+        - event_documents_tab
+        - event_sub_pages_sub_page_titles_eva_2
+      right:
         - node_title
         - field_ipu_event_dates
         - field_location
-        - field_summary
-        - field_event_theme
-        - field_ipu_event_right_menu
-        - field_documents_order_number
-        - field_agenda_order_number
-        - field_hide_programs_menu
-        - field_hide_documents_menu
-        - field_twitter_order
-        - field_event_sub_page
-      left:
-        - field_ipu_event_sessions
-      right:
-        - field_sponsor
-        - field_ipu_event_sponsors
-        - field_ipu_event_section
-      bottom:
-        - field_ipu_event_session_type
+      right_sub_page_content:
+        - event_sub_pages_sub_page_content_eva
+        - event_session_paragraphs_entity_view_1
+        - event_documents_content
+        - event_sub_pages_sub_page_content_eva_2
     fields:
+      event_documents_content:
+        plugin_id: event_documents_content
+        weight: 9
+        label: hidden
+        formatter: default
+      event_documents_tab:
+        plugin_id: event_documents_tab
+        weight: 2
+        label: hidden
+        formatter: default
+      event_programme_tab:
+        plugin_id: event_programme_tab
+        weight: 1
+        label: hidden
+        formatter: default
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 4
         label: hidden
         formatter: default
 id: node.ipu_event.full
@@ -108,88 +111,40 @@ targetEntityType: node
 bundle: ipu_event
 mode: full
 content:
-  field_agenda_order_number:
-    label: inline
+  event_session_paragraphs_entity_view_1:
     weight: 8
-    type: string
-    settings:
-      link_to_entity: false
+    region: right_sub_page_content
+    settings: {  }
     third_party_settings: {  }
-    region: top
-  field_documents_order_number:
-    label: inline
+  event_sub_pages_sub_page_content_eva:
     weight: 7
-    type: string
-    settings:
-      link_to_entity: false
+    region: right_sub_page_content
+    settings: {  }
     third_party_settings: {  }
-    region: top
-  field_event_sub_page:
-    label: above
-    weight: 12
-    type: entity_reference_revisions_entity_view
-    settings:
-      view_mode: full
-      link: ''
+  event_sub_pages_sub_page_content_eva_2:
+    weight: 10
+    region: right_sub_page_content
+    settings: {  }
     third_party_settings: {  }
-    region: top
-  field_event_theme:
-    type: entity_reference_label
-    weight: 5
-    region: top
-    label: inline
-    settings:
-      link: true
-    third_party_settings: {  }
-  field_event_type:
-    type: entity_reference_label
+  event_sub_pages_sub_page_titles_eva:
     weight: 0
-    region: top
+    region: left_sub_page_menu
+    settings: {  }
+    third_party_settings: {  }
+  event_sub_pages_sub_page_titles_eva_2:
+    weight: 3
+    region: left_sub_page_menu
+    settings: {  }
+    third_party_settings: {  }
+  field_ipu_event_dates:
+    type: daterange_default
+    weight: 5
+    region: right
     label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
-  field_hide_documents_menu:
-    label: inline
-    weight: 10
-    type: boolean
-    settings:
-      format: yes-no
-      format_custom_true: ''
-      format_custom_false: ''
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    region: top
-  field_hide_programs_menu:
-    label: inline
-    weight: 9
-    type: boolean
-    settings:
-      format: yes-no
-      format_custom_true: ''
-      format_custom_false: ''
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    region: top
-  field_ipu_event_dates:
-    type: daterange_plain
-    weight: 2
-    region: top
-    label: inline
-    settings:
       timezone_override: ''
+      format_type: long_date_without_time
+      fromto: both
       separator: '-'
     third_party_settings:
       ds:
@@ -199,114 +154,36 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_ipu_event_right_menu:
-    label: above
-    weight: 6
-    type: entity_reference_revisions_entity_view
-    settings:
-      view_mode: full
-      link: ''
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: Sections
-            lb-col: false
-            classes: {  }
-    region: top
-  field_ipu_event_section:
-    label: above
-    weight: 16
-    type: entity_reference_revisions_entity_view
-    settings:
-      view_mode: full
-      link: ''
-    third_party_settings: {  }
-    region: right
-  field_ipu_event_session_type:
-    label: above
-    weight: 17
-    type: entity_reference_revisions_entity_view
-    settings:
-      view_mode: full
-      link: ''
-    third_party_settings: {  }
-    region: bottom
-  field_ipu_event_sessions:
-    label: above
-    weight: 13
-    type: entity_reference_revisions_entity_view
-    settings:
-      view_mode: full
-      link: ''
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    region: left
-  field_ipu_event_sponsors:
-    label: above
-    weight: 15
-    type: entity_reference_revisions_entity_view
-    settings:
-      view_mode: full
-      link: ''
-    third_party_settings: {  }
-    region: right
   field_location:
-    label: inline
-    weight: 3
     type: address_default
+    weight: 6
+    region: right
+    label: hidden
     settings: {  }
     third_party_settings: {  }
-    region: top
-  field_sponsor:
-    type: entity_reference_entity_view
-    weight: 14
-    region: right
-    label: inline
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-  field_summary:
-    type: smart_trim
-    weight: 4
-    region: top
-    label: hidden
-    settings:
-      trim_length: 600
-      trim_type: chars
-      trim_suffix: ''
-      wrap_output: false
-      wrap_class: trimmed
-      more_link: false
-      more_class: more-link
-      more_text: More
-      summary_handler: full
-      trim_options: {  }
-    third_party_settings: {  }
-  field_twitter_order:
-    label: above
-    weight: 11
-    type: string
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    region: top
 hidden:
+  event_session_documents_entity_view_1: true
+  event_sessions_entity_view_1: true
+  field_agenda_order_number: true
   field_country: true
   field_date_accuracy: true
   field_do_not_display_as_link: true
   field_document_show_print: true
+  field_documents_order_number: true
   field_event_computed_date: true
+  field_event_sub_page: true
+  field_event_theme: true
+  field_event_type: true
+  field_hide_documents_menu: true
+  field_hide_programs_menu: true
+  field_ipu_event_right_menu: true
+  field_ipu_event_section: true
+  field_ipu_event_session_type: true
+  field_ipu_event_sessions: true
+  field_ipu_event_sponsors: true
   field_programme_show_print: true
+  field_sponsor: true
+  field_summary: true
+  field_twitter_order: true
   langcode: true
   links: true
