--- a/config/sync/core.entity_view_display.paragraph.event_sub_page.full.yml
+++ b/config/sync/core.entity_view_display.paragraph.event_sub_page.full.yml
@@ -1,8 +1,9 @@
-uuid: dbdd9cfd-c80f-4872-95fb-174dbef7e170
+uuid: b3c5cd1b-ce50-4890-96b3-39a6d671b899
 langcode: en
-status: true
+status: false
 dependencies:
   config:
+    - core.entity_view_mode.paragraph.full
     - field.field.paragraph.event_sub_page.field_fc_original_reference
     - field.field.paragraph.event_sub_page.field_ipu_event_section
     - field.field.paragraph.event_sub_page.field_order
@@ -13,10 +14,10 @@ dependencies:
   module:
     - ds
     - entity_reference_revisions
-id: paragraph.event_sub_page.default
+id: paragraph.event_sub_page.full
 targetEntityType: paragraph
 bundle: event_sub_page
-mode: default
+mode: full
 content:
   field_ipu_event_section:
     label: hidden
