--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -59,6 +59,7 @@ module:
   entity_embed: 0
   entity_reference_revisions: 0
   entityqueue: 0
+  eva: 0
   facets: 0
   features: 0
   features_ui: 0
@@ -94,6 +95,7 @@ module:
   image: 0
   imagemagick: 0
   inline_entity_form: 0
+  ipu_events: 0
   ipu_layouts: 0
   ipu_map: 0
   ipu_tweaks: 0
