Disable stage_file_proxy on live, by disabling on deploy

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -54,6 +54,10 @@ hooks:
         drush -y cache-rebuild
         drush -y updatedb
         drush -y config-import
+        if [ "$PLATFORM_BRANCH" = master ]; then
+            # Use Drush to disable the stage_file_proxy module on the Master environment.
+            drush dis stage_file_proxy -y
+        fi
 
 # The configuration of app when it is exposed to the web.
 web:
